--- a/style.css
+++ b/style.css
@@ -14,11 +14,28 @@ img{
   font-size: 3em;
   color: rgb(11, 0, 77);
 }
-
+.btn{
+  background-color: white;
+  width: 50px;
+  height: 50px;
+  color: gray;
+  display: inline-block;
+  text-align: center;
+  border-radius: 25px;
+  line-height: 50px;
+  margin: 5px;
+  font-size: 25px;
+}
 .player-area {
   width: 50%;
   height: 100%;
-  border: 1px solid blue;
+  
+}
+.player-area.player1 {
+  background-color: #1482FF;
+}
+.player-area.player2 {
+  background-color: #FF2E5F;
 }
 .img-container{
   width: 300px;
@@ -37,9 +54,13 @@ img{
   height: 50%;
   justify-content: space-around;
 }
+.flex-area.weapon{
+  background-color: #FAE56B;
+}
 .flex-area div{
   text-align: center;
 }
+
 /* From animate.css */
 @keyframes pulse {
   from {
