--- a/style.css
+++ b/style.css
@@ -6,6 +6,22 @@ body {
   height: 100vh;
   width: 100vw;
 }
+i.fas{
+  color: gray;
+}
+#countdown{
+  font-size: 3em;
+  background-color: rgb(0, 255, 191);
+  border-radius: 10px;
+  padding: 7px;
+  cursor: pointer;
+  box-shadow: 7px 7px 10px 1px rgba(0, 0, 0, 0.5);
+  user-select: none;
+}
+#countdown:active{
+  box-shadow: 7px 7px 10px 1px rgba(0, 0, 0, 0.5), inset 3px 3px 10px 1px rgba(0, 0, 0, 0.5);
+  
+}
 .container{
   display: flex;
   background-color: rgb(0, 197, 148);
@@ -53,7 +69,11 @@ body {
 .player-area {
   width: 50%;
 }
-
+.float{
+  position: fixed;
+  bottom: 50px;
+  right: 50px;
+}
 /* From animate.css */
 @keyframes pulse {
   from {
