--- a/style.css
+++ b/style.css
@@ -55,6 +55,10 @@ i.fas{
   width: 9rem;
   height: 9rem;
   border-radius: 9rem;
+  line-height: 3em;
+}
+.big{
+  font-size: 3em;
 }
 .img-container{
   width: 300px;
